<resources>
    <string name="app_name">TnamPet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_information">Information</string>
    <string name="menu_help">Help</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_rate">Rate This App</string>
    <string name="menu_share">Share</string>
    <string name="menu_lang">Language</string>
    <string name="lang_english">English</string>
    <string name="lang_khmer">Khmer</string>
    <string name="search_bar">Search</string>
    <string name="definition">Detail</string>
    <string name="ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>